# opencti-countries-merger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  diagnose_dup_diff.py  diagnose_rel_refs.py  docker-compose.yml  entrypoint.sh  fix_duplicate_rels.py  fix_stale_refs.py  pyproject.toml
scripts/region_cleanup/: fix_iran_region.py  fix_region_hierarchy.py  fix_unmapped_territories.py  full_audit.py  merge_north_america.py  merge_russia_region.py
scripts/stale_refs_validator/: diagnose_find_current.py  diagnose_junk_ids.py  diagnose_stale_refs.py  diagnose_unmapped.py  verify_stale_refs.py
src/opencti_country_merger/: __init__.py  config.py  main.py
src/opencti_country_merger/data/: iso3166.py  regions.py
src/opencti_country_merger/display/: tables.py
src/opencti_country_merger/es/: client.py  queries.py
src/opencti_country_merger/models/: errors.py
src/opencti_country_merger/services/: country_mapper.py  discovery.py  fix_names.py  fix_regions.py  link_regions.py  merger.py  planner.py
tests/: conftest.py  test_all_countries.py  test_country_mapper.py  test_merger.py  test_queries.py
